# ldms

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CHAMA.libevent2  CMakeLists.txt  COPYING  ChangeLog.txt  Doxyfile  Doxyfile.in  INSTALL  LICENSE  Makefile.am  Makefile.in  NOTE-ZAP-TEST-SHARED-MAP.md  README  README.libevent2  README.md  README.rst  README.txt  ReadMe.mkd  all-autogen-configure-make-makeinstall.sh  autogen.sh  config.h.in  configure.ac  configure.in  g49mem.libevent2  g49thd.libevent2  ldms-utils.spec.in  ldms_utils_old.tgz  libtool  rpm7.sh
baler/: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  baler.cfg  configure.ac  hosts.txt  ldms.cfg  narate-gen.sh
baler/config/: config.rpath
baler/dict/: Makefile.am  README  eng-dictionary
baler/docs/: Doxyfile.in  Makefile.am
baler/etc/: Makefile.am
baler/examples/: README
baler/m4/: ac_pkg_swig.m4  ax_ruby_ext.m4
baler/python/: .gitignore  Makefile.am
baler/rpm/: rhel7.spec.in
baler/scripts/: Makefile.am
baler/src/: Makefile.am
baler/swig/: Makefile.am  bhquery.py  bquery.i  bset.i  test.rb
baler/test/: eng-dictionary  host.list
docs/: .gitignore  Makefile.am  README.rst  conf.py  container-quickstart.rst  index.rst  ldms-index.rst  ldms-quickstart.rst  ldms-streams.rst  ldms_stream.rst  ldms_stream_apps.rst  ldmsd_decomposition.rst  requirements.txt  ug_notes.rst
docs/_templates/: header.html  layout.html  repo.html
docs/asf/: asf-quickstart.rst  asf-tutorial.rst  grafanause.rst  index.rst  pyanalysis.rst
docs/contributing/: docreqs.rst  index.rst  samplerwrite.rst
docs/deployment/: index.rst  ldms-test.rst
docs/intro/: docker-quickstart.rst  quick-start.rst
docs/ldms_man/: Plugin_cray_dvs_sampler.rst  index.rst  ldms-plugins.rst  ldms_auth_none.rst  ldms_build_install.rst  lsdate.rst
docs/man/: Plugin_jobid.rst  Plugin_store_app.rst  Plugin_store_csv.rst  Plugin_store_function_csv.rst  Plugin_store_kafka.rst  Plugin_store_papi.rst  Plugin_store_rabbitkw.rst  Plugin_store_rabbitv3.rst  Plugin_store_sos.rst  README.md  index.rst  ldms-csv-anonymize.rst  ldms-csv-export-sos.rst  ldms-plugins.rst  ldms-reverse-conf.rst  ldms-run-static-tests.rst  ldms-static-test.rst  ldms_auth_munge.rst  ldms_auth_naive.rst  ldms_auth_none.rst  ldms_auth_ovis.rst  ldms_authentication.rst  ldms_build_install.rst  ldms_ls.rst  ldms_quickstart.rst  ldms_sampler_base.rst  ldms_stream.rst  ldmsctl.rst  ldmsd.rst  ldmsd_controller.rst  ldmsd_decomposition.rst  ldmsd_failover.rst  ldmsd_peer_daemon_advertisement.rst  ldmsd_qgroup.rst  ldmsd_sampler_advertisement.rst  ldmsd_setgroup.rst  ldmsd_yaml_parser.rst  lsdate.rst  pll-ldms-static-test.rst
docs/man2rst/: Plugin_app_sampler.rst  Plugin_geopm_sampler.rst  Plugin_hello_sampler.rst  Plugin_ibmad_records_sampler.rst  Plugin_lnet_stats.rst  Plugin_loadavg.rst  Plugin_lustre_ost.rst  Plugin_procnfs.rst  Plugin_rapl.rst  Plugin_slurm_notifier.rst  Plugin_store_flatfile.rst  Plugin_stream_csv_store.rst  Plugin_tutorial_sampler.rst  Plugin_variable.rst  Plugin_variorum_sampler.rst  ldms-csv-anonymize.rst  ldms_csv_time_drops.rst  ldms_ls.rst  ldms_rdc_schema_name.rst  ldmsd_stream_publish.rst
docs/rst_man/: index.rst
docs/sampler_man/: Plugin_aries_mmr_configurable.rst  Plugin_clock.rst  Plugin_filesingle.rst  Plugin_ibnet.rst  Plugin_loadavg.rst  Plugin_lustre_client.rst  Plugin_procstat2.rst  Plugin_slingshot_info.rst  Plugin_sysclassib.rst  Plugin_vmstat.rst  index.rst  ldms_dstat_schema_name.rst
docs/store_man/: index.rst
docs/streams/: ldms-streams-apps.rst  ldms_stream_apps.rst
helper-scripts/: Makefile.am  configure.ac
helper-scripts/scripts/: Makefile.am  ldmsd-sampler-services  ldmsd_sampler_services  ovis-head-services  ovis-services  ovis_services
komondor/: AUTHORS  COPYING  Makefile.am  README  autogen.sh  configure.ac
komondor/etc/: Makefile.am
komondor/python/: Makefile.am
komondor/src/: Makefile.am  komondor.c  komondor.h
ldms/: AUTHORS  COPYING  ChangeLog  Dockerfile  Doxyfile.in  Makefile.am  README  README.md  autogen.sh  configure.ac  configure.in  ldms-utils.spec.in  ldms.spec.in  rules.mk
ldms/config/: .gitignore
ldms/doc/: Doxyfile.in  Makefile.am  mddoxymanfix.sh  mdlinkfilter.py  mdtest.md
ldms/etc/: .gitignore  Makefile.am  aggregator.conf.cray_xc.example  kokkos.conf  ldms.cfg  ldms.plugstack.env.in  ldmsd.aggregator.env.cray_xc.example  ldmsd.aggregator.env.in  ldmsd.kokkos.env.in  ldmsd.sampler.env.cray_xc.example  ldmsd.sampler.env.in  ldmsplugin.aggregator.conf  ldmsplugin.aggregator.conf.cray_xc.example  ldmsplugin.sampler.conf  ldmsplugin.sampler.conf.cray_xc.example  papi-sampler.conf  papi-sampler.env.in  sampler.conf  sampler.conf.cray_xc.example
ldms/examples/: ldmsd-rotate-log.sh
ldms/failover/: cmd  gen-config.pl  grp
ldms/ldms_utils/: build_ldms_shuttle  ldms_ls2test_sampler_cfg.pl  start_my_plugins
ldms/m4/: aries_mmr.m4  ax_check_compile_flag.m4  ax_check_openssl.m4  ax_lib_readline.m4  ax_python_module.m4  ax_python_module_version.m4  options.m4
ldms/man/: .gitignore  Makefile.am  Plugin_all_example.man  Plugin_app_sampler.man  Plugin_aries_lbw.man  Plugin_aries_linkstatus.man  Plugin_aries_mmr.man  Plugin_array_example.man  Plugin_clock.man  Plugin_cray_system_sampler_variants.man  Plugin_jobid.man  (+97 more)
lib/: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.in  Makefile.am  README  autogen.sh  configure.ac  configure.in  ldms-utils.spec.in  ovis-lib.spec.in  pedigree.am
me/: AUTHORS  Makefile.am  autogen.sh  configure.ac
ocm/: .gitignore  AUTHORS  INSTALL  Makefile.am  autogen.sh  configure.ac
sos/: .gitignore  ABOUT-NLS  AUTHORS  COPYRIGHT  ChangeLog  Doxyfile  Doxyfile.in  Makefile.am  NEWS  README  autogen.sh  configure.ac
util/: CMakeLists.txt  Makefile.am  lanl.sh  nola.sh  nomagic.sh  release_tarball-240.sh  release_tarball-300-mon6.sh  release_tarball-300-rhine-nosos.sh  release_tarball-300-rhine.sh  release_tarball-300.sh  release_tarball.sh  tar-excludes.txt
zap/: COPYRIGHT  Makefile.am  autogen.sh  configure.ac
(+3915 files in other folders)
